--- a/frontend/src/components/visa-form/visa-form.styles.css
+++ b/frontend/src/components/visa-form/visa-form.styles.css
@@ -100,8 +100,13 @@
   overflow: hidden;
   height: 70vh;
   user-select: none;
-  cursor: grab;
-  /* Shows grab cursor */
+  touch-action: none;
+  /* Prevents default touch behaviors */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .form-image-container:active {
