--- a/frontend/src/components/visa-form/visa-form.styles.css
+++ b/frontend/src/components/visa-form/visa-form.styles.css
@@ -133,8 +133,8 @@
   position: absolute;
   background: rgba(102, 126, 234, 0.8);
   border: 2px solid #667eea;
-  border-radius: 50%;
-  width: 30px;
+  border-radius: 10%;
+  width: 60px;
   height: 30px;
   cursor: pointer;
   display: flex;
@@ -158,85 +158,22 @@
 }
 
 /* Position the buttons over the form fields */
-.field-1 {
-  top: 21.5%;
-  left: 30%;
-}
-
-.field-2 {
-  top: 21.5%;
-  left: 58%;
-}
-
-.field-3 {
-  top: 25%;
-  left: 30%;
-}
-
-.field-4 {
-  top: 30%;
-  left: 25%;
-}
-
-.field-5 {
-  top: 35%;
-  left: 25%;
-}
-
-.field-6 {
-  top: 40%;
-  left: 25%;
-}
-
-.field-7 {
-  top: 45%;
-  left: 25%;
-}
-
-.field-8 {
-  top: 50%;
-  left: 25%;
-}
-
-.field-9 {
-  top: 55%;
-  left: 25%;
-}
-
-.field-10 {
-  top: 60%;
-  left: 25%;
-}
-
-.field-11 {
-  top: 65%;
-  left: 25%;
-}
-
-.field-12 {
-  top: 70%;
-  left: 25%;
-}
-
-.field-13 {
-  top: 75%;
-  left: 25%;
-}
-
-.field-14 {
-  top: 80%;
-  left: 25%;
-}
-
-.field-15 {
-  top: 85%;
-  left: 25%;
-}
-
-.field-16 {
-  top: 90%;
-  left: 25%;
-}
+.field-1 {top: 20.8%;left: 30%;}
+.field-2 {top: 20.8%;left: 58%;}
+.field-3 {top: 24%;left: 30%;}
+.field-4 {top: 27.5%;left: 15%;}
+.field-5 {top: 27.5%;left: 60%;}
+.field-6 {top: 30.4%;left: 24%;}
+.field-7 {top: 30.4%;left: 64%;}
+.field-8 {top: 33.4%;left: 24%;}
+.field-9 {top: 36%;left: 30%;}
+.field-10 {top: 38.8%;left: 30%;}
+.field-11 {top: 41.8%;left: 30%;}
+.field-12 {top: 47.5%;left: 30%;}
+.field-13 {top: 50.5%;left: 30%;}
+.field-14 {top: 53.3%;left: 50%;}
+.field-15 {top: 58.6%;left: 50%;}
+.field-16 {top: 68%;left: 25%;}
 
 /* AI Popup Styles */
 .ai-popup-overlay {
@@ -335,7 +272,7 @@
   }
 
   .field-button {
-    width: 15px;
+    width: 30px;
     height: 15px;
   }
 
