--- a/frontend/src/components/visa-form/visa-form.styles.css
+++ b/frontend/src/components/visa-form/visa-form.styles.css
@@ -74,6 +74,26 @@
   }
 }
 
+.scrollable-content {
+  position: fixed;
+  z-index: 1000;
+  right: 5px;
+  height: 80%;
+  width: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #667eea;
+  border-radius: 10px;
+}
+
+.scrollable-content p {
+  font-size: 20px;
+  writing-mode: vertical-rl;
+  color: white;
+  font-weight: 600;
+}
+
 .form-header {
   display: flex;
   flex-direction: row;
