--- a/frontend/src/components/settings-component/settings.styles.css
+++ b/frontend/src/components/settings-component/settings.styles.css
@@ -248,6 +248,15 @@
     overflow-y: auto;
 }
 
+.settings-grid-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    margin-top: 50px;
+}
+
 .settings-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -260,7 +269,7 @@
     height: 110px;
     background: white;
     border: none;
-    border-radius: 16px;
+    border-radius: 12px;
     padding: 1.5rem;
     display: flex;
     align-items: center;
